# model-observability-incident-platform

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
airflow/: dag-bundle-config.ini
contracts/: observability_policy.yml
docs/: accelerator-scheduling.md  advanced-orchestration-assessment.md  ai-workload-telemetry.md  airflow-asset-partitioning.md  airflow-dag-bundles.md  airflow-deadline-alerts.md  airflow-multi-team-readiness.md  airflow-stateful-orchestration.md  alert-routing-remediation.md  cloud-migration.md  constrained-impersonation.md  control-plane-depth.md  control-plane-diagnostics.md  cost-observability.md  demo-narration.txt  design-system.md  disaster-recovery.md  dra-admin-access-diagnostics.md  dra-advanced-device-sharing.md  dra-resource-health-status.md  dynamic-resource-allocation.md  event-driven-assets.md  executable-observability-runtime.md  gitops-promotion.md  governance-evidence.md  hpa-scale-to-zero.md  incident-evidence-volumes.md  indexed-job-resilience.md  inference-gateway.md  inplace-pod-resize.md  judge-demo.md  kuberay-kueue.md  kubernetes-airflow-robustness.md  kueue-cohort-fair-sharing.md  kueue-elastic-workloads.md  kueue-flavor-fungibility.md  kueue-pending-workload-visibility.md  memory-qos.md  multi-tenant-fairness.md  multikueue-dispatch.md  (+25 more)
gitops/: gitops-promotion.yaml
kubernetes/: accelerator-scheduling.yaml  admission-policies.yaml  airflow-kubernetes-executor-pod-template.yaml  alert-routing-remediation.yaml  chaos-experiments.yaml  cloud-nodepools.yaml  (+41 more)
(+94 files in other folders)
