[project]
name = "model-observability-incident-platform"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
integrations = [
  "evidently>=0.4",
  "opentelemetry-api>=1.43,<2"
]
airflow33 = ["apache-airflow==3.3.0"]
runtime = [
  "fastapi>=0.139,<1",
  "opentelemetry-api>=1.43,<2",
  "opentelemetry-exporter-otlp-proto-http>=1.43,<2",
  "opentelemetry-sdk>=1.43,<2",
  "prometheus-client>=0.25,<1",
  "pydantic>=2.13,<3",
  "uvicorn>=0.51,<1"
]
test = ["httpx2>=2.5,<3"]
dev = ["ruff==0.15.21"]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
